Logo Display on Mobile Device Fix

--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -108,6 +108,7 @@ h3 {
   color: #175940;
   font-size: 18px;
   line-height: 24px;
+  text-align: center;
 }
 
 @media only screen and (min-width: 1200px) {
