--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -122,7 +122,7 @@ a > img{
   .navbar-logo {
     position: absolute;
     top: 0;
-    left: 0;
+    left: -50px;
     transform: translate(25%, 50%);
   }
 
